2020-05-07  Jason Lawrence  <lawrence.j@apple.com>

        [ Mac wk1 ] http/tests/security/clipboard/copy-paste-html-cross-origin-iframe-across-origin.html is flaky failing.
        https://bugs.webkit.org/show_bug.cgi?id=209154

        Unreviewed test gardening.

        * platform/mac-wk1/TestExpectations:

2020-05-07  Antti Koivisto  <antti@apple.com>

        [Wheel event region] Include listeners on Window
        https://bugs.webkit.org/show_bug.cgi?id=211577

        Reviewed by Simon Fraser.

        * fast/scrolling/mac/wheel-event-listener-region-window-expected.txt: Added.
        * fast/scrolling/mac/wheel-event-listener-region-window.html: Added.

2020-05-07  Chris Dumez  <cdumez@apple.com>

        Unreviewed, mark imported/w3c/web-platform-tests/html/browsers/browsing-the-web/history-traversal/scroll-restoration-order.html as flaky on iOS.

        This test has been flaky on iOS since its import.

        * platform/ios-wk2/TestExpectations:

2020-05-07  Zalan Bujtas  <zalan@apple.com>

        [LFC[TFC] Adjust the table wrapper box style
        https://bugs.webkit.org/show_bug.cgi?id=211574

        Reviewed by Antti Koivisto.

        * fast/layoutformattingcontext/table-simple-with-border-expected.txt: Added.
        * fast/layoutformattingcontext/table-simple-with-border.html: Added.

2020-05-07  Zalan Bujtas  <zalan@apple.com>

        [LFC][TFC] Set section [top, left] used position.
        https://bugs.webkit.org/show_bug.cgi?id=211546

        Reviewed by Antti Koivisto.

        * fast/layoutformattingcontext/table-simple-with-padding-expected.txt: Added.
        * fast/layoutformattingcontext/table-simple-with-padding.html: Added.

2020-05-07  Antti Koivisto  <antti@apple.com>

        [Wheel event region] Include listeners on Document
        https://bugs.webkit.org/show_bug.cgi?id=211571

        Reviewed by Simon Fraser.

        * fast/scrolling/mac/wheel-event-listener-region-document-expected.txt: Added.