@@ -1,0 +1,3 @@
+indicator: 
+    0 0 84 23
+
